# AngloWindows-Front-of-House-Calculator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: smoke-test.yml
docs/: AI_STUDIO_HANDOFF.md  ANGLO_SYSTEM_MASTER_FINAL.md  CLAUDE_CODE_FULL_BRIEF.md  CLAUDE_CODE_REVIEW_PROMPT.md  CODEX_HANDOFF_PROMPT.md  CODEX_REPO_BOOTSTRAP_PROMPT.md  FINISHED_GOODS_ANALYSIS.md  FRONT_OF_HOUSE_CALCULATOR_BRIEF.md  GITHUB_QUICKSTART.md  RECEPTION_USER_GUIDE.md  anglo-windows-master-calculator-reception-user-guide.md  drive-assets.md  files-needed-from-manus.md  front-of-house-calculator-1.md  manus-latest-import.md  quote-blueprint-from-latest-manus.md  status-summary.md
frontend/: README.md  app.js  index.html  styles.css
imports/: README.md
imports/manus-latest/anglo-cost-calculator/: BIZMAN_KIT_STRUCTURE.md  FRONT_OF_HOUSE_CALCULATOR_BRIEF.md  PROJECT_UPDATE.md  RECEPTION_USER_GUIDE.md  SIMPLIFIED_TAXONOMY.md  SYSTEM_TAXONOMY.md  claude_dashboard_reference_findings.md  design-review-notes.md  package.json  plan_reference_findings.md  review-notes.md  todo.md
src/app/: __init__.py  dependencies.py  domain.py  main.py  repositories.py  schemas.py
src/app/api/: routes.py
src/app/data/: finished_goods_templates.csv
src/app/engines/: base.py  data.py  leaf.py  leaf_count.py  linear.py  mitre.py  shopfront.py  slider.py
src/app/services/: calculation.py  pdf_intake.py  pdf_uploads.py  products.py  quotes.py  stock.py  (+2 more)
(+22 files in other folders)
