[project]
name = "front-of-house-calculator-1"
version = "0.1.0"
description = "FastAPI backend for the Front of House Calculator-1 reception quoting workflow."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.8,<3.0",
    "uvicorn>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
